--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,9 +1,17 @@
 .App {
   text-align: center;
   display: flex;
+  background-color: #282c34;
 }
 .sidemenu {
   width: 240px;
+  border: 1px solid white;
+}
+
+.chatbox{
+  flex:1;
+  border:1px solid white;
+
 }
 
 .App-logo {
