--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,9 +2,12 @@
   text-align: center;
   display: flex;
   background-color: #282c34;
-  color:white;
+  color: white;
   position: absolute;
-  top: 0;bottom: 0;left: 0;right: 0;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 .sidemenu {
   width: 260px;
@@ -12,17 +15,25 @@
   background-color: #202123;
 }
 
-.chatbox{
-  flex:1;
+.chatbox {
+  flex: 1;
   background-color: #343541;
-
 }
-.side-menu-button{
-  padding: 15px;
-  border:1px solid white;
-  border-radius:5px;
+.side-menu-button {
+  padding: 12px;
+  border: 1px solid white;
+  border-radius: 5px;
+  text-align: left;
+  transition: ease 0.25s all;
+}
+.side-menu-button:hover {
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
+.side-menu-button span {
+  padding-left: 6px;
+  padding-right: 12px;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
