--- a/client/src/App.css
+++ b/client/src/App.css
@@ -18,6 +18,7 @@
 .chatbox {
   flex: 1;
   background-color: #343541;
+  position: relative;
 }
 .side-menu-button {
   padding: 12px;
@@ -43,6 +44,28 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
+}
+.chat-input-holder {
+ padding: 24px;
+ position: absolute;
+ bottom: 0;
+ left: 0;
+ right: 0;
+
+}
+.chat-input-textarea{
+
+  background-color: #40414f;
+  width: 90%;
+  padding: 12px;;
+  border-radius:5px;
+  color:white;
+  font-size:1.23em;
+  border:none;
+  border-color: none;
+  /* margin:12px; */
+  outline: none;
+  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.25);
 }
 
 .App-header {
