--- a/client/src/App.css
+++ b/client/src/App.css
@@ -40,6 +40,43 @@
   pointer-events: none;
 }
 
+.chat-log{
+ /* padding: 24px; */
+text-align: left;
+
+}
+.chat-message.chatgpt{
+
+  background-color:#444654;
+}
+.chat-message-center{
+ max-width: 640px;
+ margin-left:auto;
+ margin-right: auto;
+ display: flex;
+ padding: 12px;
+ padding-left: 24px;
+ padding-right: 24px;
+}
+
+.avatar{
+background: white;
+border-radius: 50%;
+width:40px;
+height: 40px;
+}
+.avatar.chatgpt{
+  background: #0da37f;
+  border-radius: 50%;
+  width:40px;
+  height: 40px;
+  }
+.message{
+
+  padding-left: 40px;
+  padding-right: 40px;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
